--- a/css/item.css
+++ b/css/item.css
@@ -1,9 +1,10 @@
 
 .itemPage {
   display: flex;
-  margin: 5rem auto;
-  width: 80vw;
-  height:100vh;
+  margin: 2rem auto;
+  /*width: 80vw;*/
+  min-width:100%;
+  /* max-height:100vh; */
 
 }
                                                   /* image display  */
@@ -12,8 +13,8 @@
   display: flex;
   flex-direction: column;
   margin:0 2rem;
-  width: 60%;
-  object-fit: contain;
+  min-width: 60%;
+  /*object-fit: contain;*/
   
 
 }
@@ -22,25 +23,26 @@
   aspect-ratio: 100/50;
   min-height:50vh;
   overflow: hidden;
-
-  
 }
 .imageDisplay .mainImg img{
   position: absolute;
   width:100%;
-  min-height:50vh;
+  /* min-height:60vh; */
   object-fit: contain;
   bottom:0;
 }
 .imageDisplay .thumbnails {
-  max-width: 50vw;
+  
+  max-height:50vh;
 }
 .imageDisplay .thumbnails .thumbImages {
   position: relative;
   display: flex;
+  max-width: 100vw;
+  flex-wrap: wrap;
   list-style: none;
-  max-width: 100%;
-  justify-content: flex-start;
+  /* max-width: 100vw; */
+  justify-content: center;
   align-items: center;
 }
 .imageDisplay .thumbnails .thumbImages li {
@@ -54,9 +56,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height:50vh;
+  /* min-height:50vh; */
   width:30%;
   margin:0;
+  /* box-sizing: border-box; */
 } 
 .itemOptions h2{
   font-weight: 700;
@@ -98,11 +101,13 @@
 }
 .itemOptions .collapse {
   display: flex;
+  position: relative;
   border: 1px solid #000;
   padding :1rem 0;
   justify-content: space-around;
   align-items: center;
   margin-top: 1rem;
+  min-height:1vh
 }
 .itemOptions .collapse h3{
   display: flex;
@@ -119,21 +124,40 @@
   margin-left: auto;
   margin-right: 1rem;
 }
+.itemOptions .collapse > .detailsWrap{
+  /* position: absolute; */
+  top:80px;
+  left:0;
+  
+
+}
+.itemOptions .collapse:focus .detailsWrap{
+  display: block;
+}
+.show {
+  /* opacity:0; */
+  margin-top: 2rem;
+  margin-left: 1rem;
+  height: 100vw;
+  transition: 0.5s;
+}
+.hide{
+  height:0;
+  overflow: hidden;
+  transition: 0.3s;
+}
 .itemOptions .detailsList{
-  position: absolute;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   list-style-type:none;
-  max-width:25%;
+  max-width:45vw;
   /* opacity: 0; */
 
 }
-.itemOptions .detailsList .open {
-  opacity: 1;
-}
+
 .itemOptions .detailsList>li {
   position: relative;
   text-indent: 15px;
-  margin:1rem;
+  margin-bottom:1rem;
 }
 .itemOptions .detailsList li::before{
   content: "-";
@@ -197,3 +221,5 @@
 .colorList #green{
   background-color: #0e7700;
 }
+
+/*media queries in main.css*/
